--- a/auth-service/auth-service/src/main/resources/application.properties
+++ b/auth-service/auth-service/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.application.name=auth-service
 # Set the port for our backend server
 server.port=8080
 
-# --- ADD MYSQL SETTINGS ---
-# Update the URL to point to your new database
+# --------------- MYSQL SETTINGS ---------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/review_app_db
-# !! UPDATE these with your own MySQL username and password !!
 spring.datasource.username=root
 spring.datasource.password=Umesh@321
 
